fix: change the /visits/{date} path into /visits/{date_range}
