# src/endpoints/retrieveVisits.js
@@ -4,17 +4,17 @@ const Visits = require("../Data/visit");
 
 const retrieveVisits = {
     method: 'get',
-    path: '/visits/:date',
+    path: '/visits/:date_range',
     async handler(request, response) {
     try {
-        const date = request.params.date.split("+");
-        const start_date = date[0];
-        const end_date = date[1];
+        const date_range = request.params.date_range.split("+");
+        const start_date = date_range[0];
+        const end_date = date_range[1];
         let visits = await Visits.getAll();
         let visits_in_range = [];
         for (const visit of visits) {
-            if (new Date(visit["date"]).getTime() >= new Date(start_date).getTime() && 
-                new Date(visit["date"]).getTime() <= new Date(end_date).getTime()) {
+            if (new Date(visit.date).getTime() >= new Date(start_date).getTime() && 
+                new Date(visit.date).getTime() <= new Date(end_date).getTime()) {
                 visits_in_range.push(visit);
             } 
         }
